クラス名変更

--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,28 +1,28 @@
-.signin__container
-  .signin__header
-    .signin__header__logo
+.signup__container
+  .signup__header
+    .signup__header__logo
       = link_to "#" do
         = image_tag "fmarket_logo_red.svg"
-    .signin-main
-      .signin-main__head 
+    .signup-main
+      .signup-main__head 
         新規会員登録
-      %ul.signin-submit-button-form
-        .signin-index-mail-box
+      %ul.signup-submit-button-form
+        .signup-index-mail-box
           = link_to "#"do
             メールアドレスで登録する
             = icon('far', 'envelope')
-        .signin-index-facebook-form
+        .signup-index-facebook-form
           = link_to "#" do
             Facebookで登録する
             = icon('fab', 'facebook-square')
             
-        .signin-index-google-form
+        .signup-index-google-form
           = link_to "#" do
             .main__conect__lists__google__btn
               Googleで登録する
             .main__conect__lists__google__icon
-    .signin__footer
-      .signin__footer__box
+    .signup__footer
+      .signup__footer__box
         = link_to "#"do
           プライバシーポリシー
         = link_to "#"do
