--- a/app/assets/stylesheets/users/registrations/new.scss
+++ b/app/assets/stylesheets/users/registrations/new.scss
@@ -1,7 +1,7 @@
 *{
   margin: 0;
 }
-.signin__header{
+.signup__header{
   height: 128px;
   text-align: center;
   background-color: whitesmoke;
@@ -24,7 +24,7 @@
   }
 }
 
-.signin-main {
+.signup-main {
   position: relative;
   min-height: 100%;
   background: #f5f5f5;
@@ -43,13 +43,13 @@
     margin: 0 auto 0;
     width: 600px;
   }
-  .signin-submit-button-form {
+  .signup-submit-button-form {
     background-color: #FFFFFF;
     height: 196px;
     margin: 0 auto;
     padding: 40px 40px 64px 40px;
     width: 582px;
-    .signin-index-mail-box {
+    .signup-index-mail-box {
       height: 50px;
       margin: 0 auto 16px;
       width: 620px;
@@ -78,7 +78,7 @@
         }
       }    
     }
-    .signin-index-facebook-form {
+    .signup-index-facebook-form {
       height: 50px;
       margin: 0 auto 16px;
       width: 620px;
@@ -107,7 +107,7 @@
         }
       }     
     } 
-    .signin-index-google-form {
+    .signup-index-google-form {
       height: 50px;
       margin: 0 auto 16px;
       width: 620px;
@@ -143,7 +143,7 @@
     }
   }
 }
-.signin__footer {
+.signup__footer {
   background: whitesmoke;
   height: 360px;
   text-align: center;
@@ -167,7 +167,7 @@
       }
     }
   }
-  &__logo img {
+  &__logo img{
     width: 80px;
     height: 80px;
     &:hover {
