--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -297,7 +297,7 @@
           .list_3_rigth
             %ul.list_item
               %h4 　　　　　　　　　　　
-              -# %h4 は残しといて！！！
+              -# %h4 は残しといてください！！！
               %li.f_item
                 %a.link{:href => "#",:class =>"p_item"}
                   個人データの安全管理に係る基本方針
