--- a/app/assets/stylesheets/products/products.scss
+++ b/app/assets/stylesheets/products/products.scss
@@ -32,10 +32,14 @@
     width: 70%;
     height: 70px;
   }
-
+  // .mellchyan{
+  //   padding-top: 40px;
+  //   font-size:20px;
+  // }
 
 
   .from_top{
+    // padding-top: 3%;
     width: 60vw;
     height: 50%;
     margin-top: 3%;
@@ -226,6 +230,7 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  // background-color: rgb(132, 211, 211);
 }
   .new_item_title{
     padding-top: 4%;
@@ -247,6 +252,7 @@
   width: 80vw;
   height: 600px;
   margin: 0 auto;
+  // background-color: rgb(0, 139, 139);
 
   .new_list_item{
     display: flex; 
@@ -328,15 +334,16 @@
       font-size: larger;
     }
 
-    .footer_pic_title_log{
+    &__log{
       margin-bottom: 2%;
       width: 100%;
       margin-top: 5%;
       padding-left: 5%;
-
-      .app_box{
-        width: 40px;
-        padding-right: 2%;
+      &__new_item {
+        .app_box{
+          width: 40px;
+          padding-right: 2%;
+        }
       }
       .app{
         padding-right: 2%;
