--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,9 +1,8 @@
 .mein
   .mein_head
     .mein_head_top
-      %a.log{:href => "#"} 
-        %img{:alt => "メルちゃん", :src => "../fmarket_logo_red.svg",class: "mein_title"}
-          
+      =link_to "#" ,class: "log" do
+        = image_tag "fmarket_logo_red.svg",class: "mein_title", alt: "メルちゃん"          
       = form_for "#" do |f|
         .from_top
           = f.text_field :content, class:'Search',placeholder: "何をお探しですか？"
@@ -44,17 +43,18 @@
 
   .mein_pic
     .pic_ad
-      %img{:alt => "広告", :src => "../inu.jpg", :title => "inu",:class =>"pic"}
+      = image_tag "inu.jpg", class: "pic", alt: "広告", title: "inu"
     .mein_pic_title
       .mein_pic_title_mein
         %h2 ちゃんチャカちゃん簡単アプリ
       .mein_pic_title_text
         %a 安心スマホアプリ
       .mein_pic_title_log
-        %a.link{:href => "#",:class =>"new_item"} 
-          %img{:alt => "app", :src => "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",:class =>"app"}
-        %a.link{:href => "#",:class =>"new_item"} 
-          %img{:alt => "app", :src => "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",:class =>"app"}
+        =link_to "#" ,class: "new_item" do
+          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app", alt: "app" 
+        =link_to "#" ,class: "new_item" do
+          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app", alt: "app" 
+
 
 
   .category
@@ -70,69 +70,70 @@
     .new_title
       %h2.new_item_title レディース新着アイテム
       %li.more_item
-        %a.link{:href => "#"} もっと見る >
+        =link_to "#" do
+          もっと見る >
     .new_list
       %ul.new_list_item
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
 
 
 
@@ -145,84 +146,83 @@
     .new_list
       %ul.new_list_item
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
-            %a.item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
-        %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
         %li.item
-          %a.link{:href => "#",:class =>"new_item"} 
+          =link_to "#" ,class: "new_item" do
             .item_text RED BULL
-            %img{:alt => "販売写真", :src => "../inu.jpg",:class =>"item_pic"}
-              %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
-                #text_price ¥1000
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
+        %li.item
+          =link_to "#" ,class: "new_item" do
+            .item_text RED BULL
+            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
+            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+              #text_price ¥1000
 
 
 
 
   .footer
     .footer_ad
-      %img{:alt => "広告", :src => "../inu.jpg", :title => "inu",:class =>"foot_ad"}
+      = image_tag "inu.jpg",class: "foot_ad", alt: "inu"
     .footer_pic_title
       .footer_pic_title_mein
         %h3 スマホで簡単フリマアップリ
         %h1 ダウンロードしないでね！
-      .footer_pic_title_log
-        %a.link{:href => "#",:class =>"new_item"} 
-          %img{:alt => "app", :src => "../logo_red.svg",:class =>"app_box"}
-        %a.link{:href => "#",:class =>"new_item"} 
-          %img{:alt => "app", :src => "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",:class =>"app"}
-        %a.link{:href => "#",:class =>"new_item"} 
-          %img{:alt => "app", :src => "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",:class =>"app"}
-
+      .footer_pic_title__log
+        =link_to "#" ,class: "footer_pic_title__log__new_item" do
+          = image_tag "logo_red.svg",class: "app_box", alt: "app"          
+        =link_to "#" ,class: "new_item" do
+          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app_box", alt: "app"
+        =link_to "#" ,class: "new_item" do
+          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app_box", alt: "app" 
 
 
     .footer_bottme
@@ -231,19 +231,19 @@
           %ul.list_item
             %h4 フリマについて
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 会社概要（運営会社）
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 採用情報
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 プレスリリース
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 公式ブログ
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 メルカリロゴ利用ガイドライン
                 
 
@@ -251,28 +251,28 @@
           %ul.list_item
             %h4 ヘルプ＆ガイド
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 メルカリガイド
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 らくらくメルカリ便
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 ゆうゆうメルカリ便
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 大型メルカリ便
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 車体取引ガイド
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 メルカリあんしん・あんぜん宣言！
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 偽ブランド品撲滅への取り組み
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 メルカリボックス
 
 
@@ -281,34 +281,34 @@
             %ul.list_item
               %h4 プライバシーと利用規約
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   プライバシーポリシー
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   メルカリ利用規約
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   あんしんスマホサポート制度に関する利用特約
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   コンプライアンスポリシー
             
 
           .list_3_rigth
             %ul.list_item
               %h4 　　　　　　　　　　　
-              -# %h4 は残しといてください！！！
+              -# %h4 は残しといて！！！
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   個人データの安全管理に係る基本方針
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   特定商取引に関する表記
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   資金決済法に基づく表示
               %li.f_item
-                %a.link{:href => "#",:class =>"p_item"}
+                =link_to "#",class: "p_item" do
                   資金決済法に基づく表示
 
 
@@ -316,18 +316,18 @@
           %ul.list_item
             %h4 国
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 日本
             %li.f_item
-              %a.link{:href => "#",:class =>"f_item"}
+              =link_to "#",class: "f_item" do
                 United States
 
 
       .footer_bottme_row
         .footer_bottme_row_text
           .footer_bottme_row_text_log
-            %a.log{:href => "#"} 
-              %img{:alt => "メルちゃん", :src => "../fmarket_logo_red.svg",class: "mein_log"}
+            =link_to "#"  do
+              = image_tag "fmarket_logo_red.svg",class: "mein_log", alt: "メルちゃん"  
           .footer_bottme_row_text_end
             © Morukari, Inc.
 
