--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -15,29 +15,29 @@
         %ul.left
           %li.bottme_menu
             = link_to "#" ,class: "color" do
-              = icon('fas', 'list', class: 'icon', :style => "color:red")
+              = icon('fas', 'list', class: 'icon', style: "color:red")
               カテゴリーから探す
           %li.bottme_menu
             = link_to "#" ,class: "color" do
-              = icon('fas', 'tag', class: 'icon', :style => "color:red")
+              = icon('fas', 'tag', class: 'icon', style: "color:red")
               ブランドから探す
       .mein_head_bottme_right
         %ul.right
           %li.bottme_menu
             = link_to "#" ,class: "color" do
-              = icon('fas', 'heart', class: 'icon', :style => "color:gray")
+              = icon('fas', 'heart', class: 'icon', style: "color:gray")
               いいね！一覧
           %li.bottme_menu
             = link_to "#" ,class: "color" do
-              = icon('fas', 'bell', class: 'icon', :style => "color:gray")
+              = icon('fas', 'bell', class: 'icon', style: "color:gray")
               お知らせ
           %li.bottme_menu
             = link_to "#" ,class: "color" do
-              = icon('fas', 'check', class: 'icon', :style => "color:gray")
+              = icon('fas', 'check', class: 'icon', style: "color:gray")
               やる事リスト
           %li#user.menu
-            %a.my_account{:href => "#",class: "color" } 
-              %img{:alt => "#", :src => "../inu.jpg",class: "my_user", :style => "color:gray"}
+            %a.my_account{href: "#",class: "color" } 
+              %img{alt: "#", src: "../inu.jpg",class: "my_user", style: "color:gray"}
               マイページ
               
 
@@ -60,10 +60,10 @@
   .category
     %h2 人気カテゴリー
     .category_btn
-      %button.btn{:type => "button"}>レディース
-      %button.btn{:type => "button"}>メンズ
-      %button.btn{:type => "button"}>家電・スマホ・カメラ
-      %button.btn{:type => "button"}>おもちゃ・ホビー・グッズ
+      %button.btn{type: "button"}>レディース
+      %button.btn{type: "button"}>メンズ
+      %button.btn{type: "button"}>家電・スマホ・カメラ
+      %button.btn{type: "button"}>おもちゃ・ホビー・グッズ
 
 
   .new
@@ -78,61 +78,61 @@
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href: "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
 
 
@@ -149,61 +149,61 @@
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href: "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
         %li.item
           =link_to "#" ,class: "new_item" do
             .item_text RED BULL
             = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{"aria-label" => "¥1000", :href => "#",:class =>"price"} 
+            %span{href:  "#",class: "price"} 
               #text_price ¥1000
 
 
