--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -72,139 +72,16 @@
       %li.more_item
         =link_to "#" do
           もっと見る >
-    .new_list
-      %ul.new_list_item
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href: "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-
-
+    = render partial: "product"
 
 
   .new
     .new_title
       %h2.new_item_title メンズ新着アイテム
       %li.more_item
-        %a.link{:href => "#"} もっと見る >
-    .new_list
-      %ul.new_list_item
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href: "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
-        %li.item
-          =link_to "#" ,class: "new_item" do
-            .item_text RED BULL
-            = image_tag "inu.jpg",class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price"} 
-              #text_price ¥1000
+        =link_to "#" do
+          もっと見る >
+    = render partial: "product"
 
 
 
