another_template_index

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,217 +1,66 @@
-.mein
-  .mein_head
-    .mein_head_top
-      =link_to "#" ,class: "log" do
-        = image_tag "fmarket_logo_red.svg",class: "mein_title", alt: "メルちゃん"          
-      = form_for "#" do |f|
-        .from_top
-          = f.text_field :content, class:'Search',placeholder: "何をお探しですか？"
-          = button_tag type: 'submit', class: 'form_submit' do
-            %i.fa-lg.fa-fw.fa-search
-
-
-    .mein_head_bottme
-      .mein_head_bottme_left
-        %ul.left
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'list', class: 'icon', style: "color:red")
-              カテゴリーから探す
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'tag', class: 'icon', style: "color:red")
-              ブランドから探す
-      .mein_head_bottme_right
-        %ul.right
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'heart', class: 'icon', style: "color:gray")
-              いいね！一覧
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'bell', class: 'icon', style: "color:gray")
-              お知らせ
-          %li.bottme_menu
-            = link_to "#" ,class: "color" do
-              = icon('fas', 'check', class: 'icon', style: "color:gray")
-              やる事リスト
-          %li#user.menu
-            %a.my_account{href: "#",class: "color" } 
-              %img{alt: "#", src: "../inu.jpg",class: "my_user", style: "color:gray"}
-              マイページ
-              
-
-  .mein_pic
-    .pic_ad
-      = image_tag "inu.jpg", class: "pic", alt: "広告", title: "inu"
-    .mein_pic_title
-      .mein_pic_title_mein
-        %h2 ちゃんチャカちゃん簡単アプリ
-      .mein_pic_title_text
-        %a 安心スマホアプリ
-      .mein_pic_title_log
-        =link_to "#" ,class: "new_item" do
-          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app", alt: "app" 
-        =link_to "#" ,class: "new_item" do
-          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app", alt: "app" 
+= render partial: 'header'
+.mein_pic
+  .pic_ad
+    = image_tag "inu.jpg", class: "pic", alt: "広告", title: "inu"
+  .mein_pic_title
+    .mein_pic_title_mein
+      %h2 ちゃんチャカちゃん簡単アプリ
+    .mein_pic_title_text
+      %a 安心スマホアプリ
+    .mein_pic_title_log
+      =link_to "#" ,class: "new_item" do
+        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app", alt: "app" 
+      =link_to "#" ,class: "new_item" do
+        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app", alt: "app" 
 
 
 
-  .category
-    %h2 人気カテゴリー
-    .category_btn
-      %button.btn{type: "button"}>レディース
-      %button.btn{type: "button"}>メンズ
-      %button.btn{type: "button"}>家電・スマホ・カメラ
-      %button.btn{type: "button"}>おもちゃ・ホビー・グッズ
+.category
+  %h2 人気カテゴリー
+  .category_btn
+    %button.btn{type: "button"}>レディース
+    %button.btn{type: "button"}>メンズ
+    %button.btn{type: "button"}>家電・スマホ・カメラ
+    %button.btn{type: "button"}>おもちゃ・ホビー・グッズ
 
 
-  .new
-    .new_title
-      %h2.new_item_title レディース新着アイテム
-      %li.more_item
-        =link_to "#" do
-          もっと見る >
-    = render partial: "product"
+.new
+  .new_title
+    %h2.new_item_title レディース新着アイテム
+    %li.more_item
+      =link_to "#" do
+        もっと見る >
+  = render partial: "product"
 
 
-  .new
-    .new_title
-      %h2.new_item_title メンズ新着アイテム
-      %li.more_item
-        =link_to "#" do
-          もっと見る >
-    = render partial: "product"
+.new
+  .new_title
+    %h2.new_item_title メンズ新着アイテム
+    %li.more_item
+      =link_to "#" do
+        もっと見る >
+  = render partial: "product"
 
 
 
 
-  .footer
-    .footer_ad
-      = image_tag "inu.jpg",class: "foot_ad", alt: "inu"
-    .footer_pic_title
-      .footer_pic_title_mein
-        %h3 スマホで簡単フリマアップリ
-        %h1 ダウンロードしないでね！
-      .footer_pic_title__log
-        =link_to "#" ,class: "footer_pic_title__log__new_item" do
-          = image_tag "logo_red.svg",class: "app_box", alt: "app"          
-        =link_to "#" ,class: "new_item" do
-          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app_box", alt: "app"
-        =link_to "#" ,class: "new_item" do
-          = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app_box", alt: "app" 
+.footer
+  .footer_ad
+    = image_tag "inu.jpg",class: "foot_ad", alt: "inu"
+  .footer_pic_title
+    .footer_pic_title_mein
+      %h3 スマホで簡単フリマアップリ
+      %h1 ダウンロードしないでね！
+    .footer_pic_title__log
+      =link_to "#" ,class: "footer_pic_title__log__new_item" do
+        = image_tag "logo_red.svg",class: "app_box", alt: "app"          
+      =link_to "#" ,class: "new_item" do
+        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg",class: "app_box", alt: "app"
+      =link_to "#" ,class: "new_item" do
+        = image_tag "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg",class: "app_box", alt: "app" 
 
 
-    .footer_bottme
-      .footer_bottme_list
-        .footer_bottme_list_1
-          %ul.list_item
-            %h4 フリマについて
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                会社概要（運営会社）
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                採用情報
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                プレスリリース
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                公式ブログ
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                メルカリロゴ利用ガイドライン
-                
-
-        .footer_bottme_list_2
-          %ul.list_item
-            %h4 ヘルプ＆ガイド
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                メルカリガイド
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                らくらくメルカリ便
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                ゆうゆうメルカリ便
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                大型メルカリ便
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                車体取引ガイド
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                メルカリあんしん・あんぜん宣言！
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                偽ブランド品撲滅への取り組み
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                メルカリボックス
-
-
-        .footer_bottme_list_3
-          .list_3_left
-            %ul.list_item
-              %h4 プライバシーと利用規約
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  プライバシーポリシー
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  メルカリ利用規約
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  あんしんスマホサポート制度に関する利用特約
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  コンプライアンスポリシー
-            
-
-          .list_3_rigth
-            %ul.list_item
-              %h4 　　　　　　　　　　　
-              -# %h4 は残しといて！！！
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  個人データの安全管理に係る基本方針
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  特定商取引に関する表記
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  資金決済法に基づく表示
-              %li.f_item
-                =link_to "#",class: "p_item" do
-                  資金決済法に基づく表示
-
-
-        .footer_bottme_list_4
-          %ul.list_item
-            %h4 国
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                日本
-            %li.f_item
-              =link_to "#",class: "f_item" do
-                United States
-
-
-      .footer_bottme_row
-        .footer_bottme_row_text
-          .footer_bottme_row_text_log
-            =link_to "#"  do
-              = image_tag "fmarket_logo_red.svg",class: "mein_log", alt: "メルちゃん"  
-          .footer_bottme_row_text_end
-            © Morukari, Inc.
-
-
-
-
-
+= render partial: 'footer'
 
 .producte
   .producte_now
