--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'users/registrations/new';
+@import 'users/show';
 @import 'products/index';
